apps/offmirror/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-off
  namespace: offmirror
spec:
  selector:
    app: mongo-off
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  clusterIP: None  # headless — для StatefulSet
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-off-svc
  namespace: offmirror
spec:
  selector:
    app: mongo-off
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
