apps/offmirror/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: offmirror
  namespace: offmirror
spec:
  selector:
    app: offmirror
  ports:
    - name: http
      port: 80
      targetPort: 80
